migrated to Gradle + updated to 1.21.11