@@ -1,8 +1,8 @@
 package cz.qery.toolkit.commands;
 
 import cz.qery.toolkit.Main;
-import cz.qery.toolkit.Scripts;
-import cz.qery.toolkit.Tools;
+import cz.qery.toolkit.helper.Other;
+import cz.qery.toolkit.loader.Commands;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.command.Command;
@@ -29,49 +29,49 @@ public class Crawl implements CommandExecutor {
         String who;
 
         if (args.length > 0) {
-            if (!CommandHandler.hasPermissionOther(sender, cmd)) {
+            if (!Commands.hasPermissionOther(sender, cmd)) {
                 return false;
             }
 
-            target = CommandHandler.getPlayer(sender, args[0]);
+            target = Commands.getPlayer(sender, args[0]);
             if (target == null) {
-                sender.sendMessage(Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Player " + h + args[0] + t + " is not online!"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Player " + h + args[0] + t + " is not online!"));
                 return false;
             }
             who = "Player";
         } else {
             if (sender instanceof Player) {
-                if (!CommandHandler.hasPermission(sender, cmd)) {
+                if (!Commands.hasPermission(sender, cmd)) {
                     return false;
                 }
 
                 target = (Player) sender;
                 who = "You";
             } else {
-                sender.sendMessage(Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Please use " + h + "/crawl <player>"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Please use " + h + "/crawl <player>"));
                 return false;
             }
         }
 
-        Location loc = new Location(target.getWorld(), target.getLocation().getBlockX(), target.getLocation().getBlockY()+1, target.getLocation().getBlockZ());
+        Location loc = new Location(target.getWorld(), target.getLocation().getBlockX(), target.getLocation().getBlockY() + 1, target.getLocation().getBlockZ());
 
-        if ((!Objects.equals(target.getMetadata("crawl").toString(), "[]") && !target.getMetadata("crawl").get(0).asBoolean()) || Objects.equals(target.getMetadata("crawl").toString(), "[]")) {
+        if ((!Objects.equals(target.getMetadata("crawl").toString(), "[]") && !target.getMetadata("crawl").getFirst().asBoolean()) || Objects.equals(target.getMetadata("crawl").toString(), "[]")) {
             if (target.isOnGround()) {
                 if (target.getLocation().getY() % 1 <= 0.25) {
                     target.setMetadata("crawl", new FixedMetadataValue(plugin, true));
-                    Scripts.bMap.put(target.getUniqueId(), new Location[]{loc});
-                    sender.sendMessage(Tools.chat(b+"["+n+"CRAWL"+b+"]"+t+" Crawl mode has been turned &aON"+t+"!"));
+                    Other.bMap.put(target.getUniqueId(), new Location[]{loc});
+                    sender.sendMessage(Other.Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Crawl mode has been turned &aON" + t + "!"));
                     if (loc.getBlock().isEmpty()) {
                         loc.getBlock().setType(Material.BARRIER);
                     }
                 } else {
-                    sender.sendMessage(Tools.chat(b+"["+n+"CRAWL"+b+"]"+t+" "+who+" must stand on a full block or lower than slab!"));
+                    sender.sendMessage(Other.Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " " + who + " must stand on a full block or lower than slab!"));
                 }
             } else {
-                sender.sendMessage(Tools.chat(b+"["+n+"CRAWL"+b+"]"+t+" "+who+" must stand on a block!"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " " + who + " must stand on a block!"));
             }
         } else {
-            Scripts.bDisable(target, false);
+            Other.bDisable(target, false);
         }
 
         return false;
