@@ -1,8 +1,8 @@
 package cz.qery.toolkit.commands;
 
 import cz.qery.toolkit.Main;
-import cz.qery.toolkit.Scripts;
-import cz.qery.toolkit.Tools;
+import cz.qery.toolkit.helper.Other;
+import cz.qery.toolkit.loader.Commands;
 import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -29,31 +29,31 @@ public class Sit implements CommandExecutor {
         String who;
 
         if (args.length > 0) {
-            if (!CommandHandler.hasPermissionOther(sender, cmd)) {
+            if (!Commands.hasPermissionOther(sender, cmd)) {
                 return false;
             }
 
-            target = CommandHandler.getPlayer(sender, args[0]);
+            target = Commands.getPlayer(sender, args[0]);
             if (target == null) {
-                sender.sendMessage(Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Player " + h + args[0] + t + " is not online!"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Player " + h + args[0] + t + " is not online!"));
                 return false;
             }
             who = "Player";
         } else {
             if (sender instanceof Player) {
-                if (!CommandHandler.hasPermission(sender, cmd)) {
+                if (!Commands.hasPermission(sender, cmd)) {
                     return false;
                 }
 
                 target = (Player) sender;
                 who = "You";
             } else {
-                sender.sendMessage(Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Please use " + h + "/sit <player>"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Please use " + h + "/sit <player>"));
                 return false;
             }
         }
 
-        if ((!Objects.equals(target.getMetadata("sit").toString(), "[]") && target.getMetadata("sit").get(0).asInt() == 0) || Objects.equals(target.getMetadata("sit").toString(), "[]")) {
+        if ((!Objects.equals(target.getMetadata("sit").toString(), "[]") && target.getMetadata("sit").getFirst().asInt() == 0) || Objects.equals(target.getMetadata("sit").toString(), "[]")) {
             if (target.isOnGround()) {
                 Location loc = new Location(target.getWorld(), target.getLocation().getBlockX() + 0.5, target.getLocation().getBlockY() - 0.96 + target.getLocation().getY() % 1, target.getLocation().getBlockZ() + 0.5);
                 loc.setYaw(target.getLocation().getYaw());
@@ -67,20 +67,20 @@ public class Sit implements CommandExecutor {
                 as.setPassenger(target);
                 target.setMetadata("sit", new FixedMetadataValue(plugin, as.getEntityId()));
 
-                String msgOn = Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Sit mode has been turned &aON" + t + "!");
+                String msgOn = Other.Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Sit mode has been turned &aON" + t + "!");
                 target.sendMessage(msgOn);
 
                 if (!target.getName().equals(sender.getName())) {
                     sender.sendMessage(msgOn);
                 }
             } else {
-                sender.sendMessage(Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " " + who + " must stand on a block!"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " " + who + " must stand on a block!"));
             }
         } else {
-            Scripts.sCheck(target);
+            Other.sCheck(target);
 
             if (!target.getName().equals(sender.getName())) {
-                sender.sendMessage(Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Sit mode has been turned &cOFF" + t + "!"));
+                sender.sendMessage(Other.Tools.chat(b + "[" + n + "SIT" + b + "]" + t + " Sit mode has been turned &cOFF" + t + "!"));
             }
         }
         return false;
