@@ -1,8 +1,7 @@
 package cz.qery.toolkit.events;
 
 import cz.qery.toolkit.Main;
-import cz.qery.toolkit.Scripts;
-import cz.qery.toolkit.Tools;
+import cz.qery.toolkit.helper.Other;
 import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
@@ -26,7 +25,7 @@ public class Move implements Listener {
 
         //FREEZE
         if (!Objects.equals(p.getMetadata("freeze").toString(), "[]")) {
-            if (p.getMetadata("freeze").get(0).asBoolean()) {
+            if (p.getMetadata("freeze").getFirst().asBoolean()) {
                 if (e.getFrom().getBlockX() != e.getTo().getBlockX() || e.getFrom().getBlockZ() != e.getTo().getBlockZ()) {
                     e.setCancelled(true);
                 }
@@ -34,25 +33,25 @@ public class Move implements Listener {
         }
         //CRAWL
         if (!Objects.equals(p.getMetadata("crawl").toString(), "[]")) {
-            if (p.getMetadata("crawl").get(0).asBoolean()) {
-                Scripts.bCheck(p);
+            if (p.getMetadata("crawl").getFirst().asBoolean()) {
+                Other.bCheck(p);
             }
         }
 
         //LUNAR
         if (plugin.getConfig().getBoolean("lunar.kick")) {
             if (!Objects.equals(Objects.requireNonNull(p.getPlayer()).getMetadata("client").toString(), "[]")) {
-                if (!p.getPlayer().getMetadata("client").get(0).asString().equals("LunarClient")) {
-                    e.getPlayer().kick(Component.text(Tools.chat(plugin.getConfig().getString("lunar.message"))));
+                if (!p.getPlayer().getMetadata("client").getFirst().asString().equals("LunarClient")) {
+                    e.getPlayer().kick(Component.text(Other.Tools.chat(plugin.getConfig().getString("lunar.message"))));
                 }
             } else {
-                e.getPlayer().kick(Component.text(Tools.chat(plugin.getConfig().getString("lunar.message"))));
+                e.getPlayer().kick(Component.text(Other.Tools.chat(plugin.getConfig().getString("lunar.message"))));
             }
         }
 
         //SIT
-        if (!Objects.equals(p.getMetadata("sit").toString(), "[]") && p.getMetadata("sit").get(0).asInt() != 0) {
-            Scripts.sCheck(p);
+        if (!Objects.equals(p.getMetadata("sit").toString(), "[]") && p.getMetadata("sit").getFirst().asInt() != 0) {
+            Other.sCheck(p);
         }
     }
 }
