@@ -1,30 +1,31 @@
-package cz.qery.toolkit;
+package cz.qery.toolkit.helper;
 
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import net.minecraft.core.BlockPosition;
-import net.minecraft.core.particles.Particles;
-import net.minecraft.network.protocol.game.PacketPlayOutExplosion;
-import net.minecraft.network.protocol.game.PacketPlayOutSpawnEntityExperienceOrb;
-import net.minecraft.server.level.EntityPlayer;
-import net.minecraft.server.level.EntityTrackerEntry;
-import net.minecraft.sounds.SoundEffects;
-import net.minecraft.world.entity.EntityExperienceOrb;
+import cz.qery.toolkit.Main;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.particles.ParticleTypes;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.protocol.game.ClientboundExplodePacket;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.sounds.SoundEvents;
 import net.minecraft.world.level.Explosion;
-import net.minecraft.world.phys.Vec3D;
+import net.minecraft.world.phys.Vec3;
 import org.bukkit.*;
-import org.bukkit.craftbukkit.v1_21_R1.entity.CraftPlayer;
+import org.bukkit.craftbukkit.entity.CraftPlayer;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.bukkit.metadata.FixedMetadataValue;
 
+import java.lang.reflect.Constructor;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.util.*;
 
-public class Scripts {
+public class Other {
+    public static HashMap<UUID, Location[]> bMap = new HashMap<>();
     static Main plugin = Main.getPlugin(Main.class);
     static String b = Main.colors.get("b");
     static String n = Main.colors.get("n");
@@ -34,10 +35,10 @@ public class Scripts {
     public static void cleanup(Player p) {
         // Sit check
         if (!Objects.equals(p.getMetadata("sit").toString(), "[]")) {
-            if (p.getMetadata("sit").get(0).asInt() != 0) {
+            if (p.getMetadata("sit").getFirst().asInt() != 0) {
                 Location loc = new Location(p.getWorld(), p.getLocation().getBlockX(), p.getLocation().getBlockY(), p.getLocation().getBlockZ(), p.getLocation().getYaw(), p.getLocation().getPitch());
                 for (Entity ent : loc.getChunk().getEntities()) {
-                    if (ent.getEntityId() == p.getMetadata("sit").get(0).asInt()) {
+                    if (ent.getEntityId() == p.getMetadata("sit").getFirst().asInt()) {
                         ent.remove();
                     }
                 }
@@ -46,7 +47,7 @@ public class Scripts {
 
         // Crawl check
         if (!Objects.equals(p.getMetadata("crawl").toString(), "[]")) {
-            if (p.getMetadata("crawl").get(0).asBoolean()) {
+            if (p.getMetadata("crawl").getFirst().asBoolean()) {
                 bDisable(p, false);
             }
         }
@@ -62,7 +63,7 @@ public class Scripts {
     public static void sCheck(Player p) {
         Location loc = p.getLocation();
         for (Entity ent : loc.getChunk().getEntities()) {
-            if (ent.getEntityId() == p.getMetadata("sit").get(0).asInt()) {
+            if (ent.getEntityId() == p.getMetadata("sit").getFirst().asInt()) {
                 ent.remove();
 
                 p.teleport(loc.add(0, 1.7, 0));
@@ -71,8 +72,6 @@ public class Scripts {
             }
         }
     }
-
-    public static HashMap<UUID, Location[]> bMap = new HashMap<>();
 
     @SuppressWarnings("deprecation")
     public static void bCheck(Player p) {
@@ -111,10 +110,10 @@ public class Scripts {
         p.sendMessage(Tools.chat(b + "[" + n + "CRAWL" + b + "]" + t + " Crawl mode has been turned &cOFF" + t + "!"));
 
         if (!self) {
-            Scripts.bCheck(p);
+            Other.bCheck(p);
         }
 
-        Scripts.bMap.remove(p.getUniqueId());
+        Other.bMap.remove(p.getUniqueId());
         if (pH.getBlock().getType() == Material.BARRIER) {
             pH.getBlock().setType(Material.AIR);
         }
@@ -141,39 +140,72 @@ public class Scripts {
     }
 
     public static void crash(Player p) throws InterruptedException {
-        EntityPlayer p_entity = ((CraftPlayer) p).getHandle();
+        ServerPlayer entity = ((CraftPlayer) p).getHandle();
         Location loc = p.getLocation();
 
-        List<BlockPosition> list = new ArrayList<>();
-        list.add(BlockPosition.a(p.getLocation().getX(), p.getLocation().getY(), p.getLocation().getZ()));
+        List<BlockPos> list = new ArrayList<>();
+        list.add(new BlockPos(loc.getBlockX(), loc.getBlockY(), loc.getBlockZ()));
+        Vec3 vec = new Vec3(Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE);
 
-        Vec3D vec = new Vec3D(Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE);
+        Constructor<?> packetCons = null;
+        try {
+            for (Constructor<?> c : ClientboundExplodePacket.class.getConstructors()) {
+                if (c.getParameterCount() == 10) {
+                    packetCons = c;
+                    break;
+                }
+            }
+        } catch (Exception ignored) {
+        }
 
-        for (int i = 0; i < 100; i++) {
-            p_entity.c.b(new PacketPlayOutExplosion(Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE, Float.MAX_VALUE, list, vec, Explosion.Effect.a, Particles.x, Particles.x, SoundEffects.ap));
+        if (packetCons != null) {
+            try {
+                Object soundArg = (packetCons.getParameterTypes()[9] == net.minecraft.core.Holder.class)
+                        ? BuiltInRegistries.SOUND_EVENT.wrapAsHolder(SoundEvents.EMPTY)
+                        : SoundEvents.EMPTY;
+
+                Object packet = packetCons.newInstance(
+                        Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE,
+                        Float.MAX_VALUE,
+                        list,
+                        vec,
+                        Explosion.BlockInteraction.KEEP,
+                        ParticleTypes.EXPLOSION,
+                        ParticleTypes.EXPLOSION,
+                        soundArg
+                );
+
+                for (int i = 0; i < 100; i++) {
+                    entity.connection.send((ClientboundExplodePacket) packet);
+                }
+            } catch (Exception ignored) {
+            }
         }
 
         Thread.sleep(500);
 
+        Particle[] particles = {
+                Particle.EXPLOSION,
+                Particle.TOTEM_OF_UNDYING,
+                Particle.SMOKE,
+                Particle.WHITE_SMOKE,
+                Particle.LARGE_SMOKE,
+                Particle.CAMPFIRE_COSY_SMOKE,
+                Particle.CAMPFIRE_SIGNAL_SMOKE,
+                Particle.CLOUD,
+                Particle.CRIT,
+                Particle.ENCHANTED_HIT,
+                Particle.SCULK_CHARGE_POP,
+                Particle.FALLING_SPORE_BLOSSOM
+        };
+
         for (int i = 0; i < 100; i++) {
-            p.spawnParticle(Particle.EXPLOSION, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.TOTEM_OF_UNDYING, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.SMOKE, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.WHITE_SMOKE, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.LARGE_SMOKE, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.CAMPFIRE_COSY_SMOKE, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.CAMPFIRE_SIGNAL_SMOKE, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.DRAGON_BREATH, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.CLOUD, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.CRIT, loc, Integer.MAX_VALUE);
-            p.spawnParticle(Particle.ENCHANTED_HIT, loc, Integer.MAX_VALUE);
-        }
-
-        Thread.sleep(500);
-
-        for (int i = 0; i < 30000; i++) {
-            EntityExperienceOrb dd = new EntityExperienceOrb(p_entity.cN(), p.getLocation().getX(), p.getLocation().getY(), p.getLocation().getZ(), Integer.MAX_VALUE);
-            p_entity.c.b(new PacketPlayOutSpawnEntityExperienceOrb(dd, new EntityTrackerEntry(p_entity.A(), p_entity, Integer.MAX_VALUE, true, null, null)));
+            for (Particle particle : particles) {
+                try {
+                    p.spawnParticle(particle, loc, Integer.MAX_VALUE);
+                } catch (Exception ignored) {
+                }
+            }
         }
     }
 
@@ -181,7 +213,7 @@ public class Scripts {
         if (Objects.equals(p.getMetadata("client").toString(), "[]")) {
             p.setMetadata("client", new FixedMetadataValue(plugin, client));
             Tools.log(b + "[" + n + "SERVER" + b + "] " + h + p.getName() + t + " client " + h + client);
-        } else if (Objects.equals(p.getMetadata("trueclient").toString(), "[]") && !p.getMetadata("client").get(0).asString().equalsIgnoreCase(client)) {
+        } else if (Objects.equals(p.getMetadata("trueclient").toString(), "[]") && !p.getMetadata("client").getFirst().asString().equalsIgnoreCase(client)) {
             p.setMetadata("trueclient", new FixedMetadataValue(plugin, client));
             Tools.log(b + "[" + n + "SERVER" + b + "] " + h + p.getName() + t + " true client " + h + client);
         }
@@ -206,10 +238,21 @@ public class Scripts {
         List<Player> players = new ArrayList<>(Bukkit.getOnlinePlayers());
         for (Player p : players) {
             if (!Objects.equals(p.getMetadata("closespam").toString(), "[]")) {
-                if (p.getMetadata("closespam").get(0).asBoolean()) {
+                if (p.getMetadata("closespam").getFirst().asBoolean()) {
                     p.closeInventory();
                 }
             }
+        }
+    }
+
+    public static class Tools {
+        @SuppressWarnings("deprecation")
+        public static String chat(String message) {
+            return ChatColor.translateAlternateColorCodes('&', message);
+        }
+
+        public static void log(String message) {
+            Bukkit.getConsoleSender().sendMessage(chat(message));
         }
     }
 }
